# Dissertation-code-sample

source code/: CMakeLists.txt
source code/src/: BlobDetector.cpp  BlobDetector.h  CMakeLists.txt  ImageProcessFunctions.h
src/: ImageProcessFunctions.cpp  VehicleCountingMain.cpp
